@@ -291,6 +291,8 @@ contModel1 <- mxOption(contModel1, "Function precision", 1e-9)
 contModel1A <- mxOption(contModel1A, "Function precision", 1e-9)
 contModel1 <- mxOption(contModel1, "Calculate Hessian", "No")
 contModel1A <- mxOption(contModel1A, "Calculate Hessian", "No")
+contModel1 <- mxOption(contModel1, "Standard Errors", "No")
+contModel1A <- mxOption(contModel1A, "Standard Errors", "No")
 
 contFit1 <- mxRun(contModel1, suppressWarnings=TRUE)
 contFit1A <- mxRun(contModel1A, suppressWarnings=TRUE)
@@ -327,6 +329,8 @@ ordModel1 <- mxOption(ordModel1, "Function precision", 1e-9)
 ordModel1A <- mxOption(ordModel1A, "Function precision", 1e-9)
 ordModel1 <- mxOption(ordModel1, "Calculate Hessian", "No")
 ordModel1A <- mxOption(ordModel1A, "Calculate Hessian", "No")
+ordModel1 <- mxOption(ordModel1, "Standard Errors", "No")
+ordModel1A <- mxOption(ordModel1A, "Standard Errors", "No")
 
 ordFit1 <- mxRun(ordModel1, suppressWarnings=TRUE)
 ordFit1A <- mxRun(ordModel1A, suppressWarnings=TRUE)
@@ -414,6 +418,11 @@ contModel2 <- mxOption(contModel2, "Calculate Hessian", "No")
 ordModel2 <- mxOption(ordModel2, "Calculate Hessian", "No")
 allModel2 <- mxOption(allModel2, "Calculate Hessian", "No")
 dubModel2 <- mxOption(dubModel2, "Calculate Hessian", "No")
+
+contModel2 <- mxOption(contModel2, "Standard Errors", "No")
+ordModel2 <- mxOption(ordModel2, "Standard Errors", "No")
+allModel2 <- mxOption(allModel2, "Standard Errors", "No")
+dubModel2 <- mxOption(dubModel2, "Standard Errors", "No")
 
 contFit2 <- mxRun(contModel2, suppressWarnings=TRUE)
 ordFit2  <- mxRun(ordModel2, suppressWarnings=TRUE)
